# DGIST-MCL-QuadTemplate

./: CMakeLists.txt  README.md  debugging_for_jihwan.m  main.cpp  run_linux
data/: MJMODEL.TXT  data_FL.csv  data_FR.csv  data_RL.csv  data_RR.csv  data_trunk.csv  quadrupedMCL.xml
include/: animation.h  controller.h  dataLogging.h  filter.h  globVariable.h  kinematics.h  trajectory.h
source/: controller.cpp  filter.cpp  kinematics.cpp  trajectory.cpp
